<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    tools:context=".WeatherInfo">
    <LinearLayout
        android:id="@+id/ViewGroupLocationSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutLocationSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextLocationSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:hint="@string/code_postal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ButtonLocationSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/actualiser" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/MessageIntroInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introActyInfo"
            android:textSize="24sp"
            android:layout_marginTop="64dip"
            android:layout_marginBottom="16dip"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:textColor="@color/purple_500"/>
        <ImageView
            android:id="@+id/ImageViewHintHabit"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/sunglasses"/>
    </LinearLayout>
</LinearLayout>